<resources>
    <string name="app_name">labor4QuizAndroid</string>
    <string name="quiz_text">QUIZ</string>
    <string name="your_name_text">Your name</string>
    <string name="get_started_button_text">GET STARTED</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_score_text">Your score</string>
    <string name="choose_contact_text">CHOOSE CONTACT</string>
    <string name="your_name_is_textview_text">The name of the player is:</string>
    <string name="try_again_text">Try again</string>
    <string name="player_name_text">Player name:</string>
    <string name="high_score_text">High score:</string>
    <string name="add_question_text">ADD QUESTION</string>
    <string name="correct_answer_hint">Correct answer</string>
    <string name="answer_hint">Answer</string>
    <string name ="question_hint">Question</string>
    <string name="phone_number_text">Phone number:</string>
    <string name="navigation_drawer_home_item_title">Home</string>
    <string name="navigation_drawer_quiz_time_item_title">Quiz time</string>
    <string name="navigation_drawer_profile_item_title">Profile</string>
    <string name="navigation_drawer_list_of_questions_item_title">List of questions</string>
    <string name="navigation_drawer_new_question_item_title">New question</string>
    <string name="details_text">DETAILS</string>
    <string name="delete_text">DELETE</string>
    <string name="no_quiz_text">No questions!</string>
    <string name="enjoy_the_quiz_app_text">Enjoy the quiz app where you can</string>
    <string name="test_your_skills_text">Test your skills</string>
    <string name="read_questions_text">Read questions</string>
    <string name="create_questions_text">Create question</string>

</resources>